# libtdd

./: .clang-format  .gitignore  .travis.yml  Doxyfile  LICENSE  Makefile  README  README.md  meson.build  meson_options.txt
docs/: Doxyfile.in  make_docs.sh  meson.build
examples/: main.c  meson.build
include/: ctest.h  ctest_signals.h  ctest_strutil.h  ctest_timeutil.h  meson.build  signals.h  strutil.h  tdd.h  timeutil.h
src/: ctest.c  ctest_signals.c  ctest_strutil.c  ctest_suite.c  ctest_test.c  ctest_testfn.c  ctest_timeutil.c  meson.build  runner.c  signals.c  stats.c  strutil.c  suite.c  test.c  testfn.c  timeutil.c
test/: main.c
