option('posix_c_source', type: 'string', value: '199506L', description: 'Value for _X_POSIX_C_SOURCE')
option('use_colour_output', type: 'boolean', value: true, description: 'Enables coloured test output')
option('build_examples', type: 'boolean', value: false, description: 'Builds example binaries as well')
